--- a/index.html
+++ b/index.html
@@ -51,6 +51,42 @@
         </div>
     </section>
 
+    <section id="about" class="about container">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi aliquam similique amet harum nulla cum modi a temporibus, quidem ad dolor eos quasi eum? Sint dicta ab ducimus! Perspiciatis magni placeat corrupti cumque? Maiores, provident, vel ea voluptas totam aliquid corrupti fugiat odio, unde accusamus accusantium harum expedita id nihil?</p>
+        <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2021 - Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolorem, facilis doloremque esse culpa sit minus dolore laborum hic, excepturi neque doloribus? Quam sed unde culpa repellat laboriosam tempore ipsam.</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2021 - Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolorem, facilis doloremque esse culpa sit minus dolore laborum hic, excepturi neque doloribus? Quam sed unde culpa repellat laboriosam tempore ipsam.</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
+                        <h5>Software Engineer</h5>
+                        <p>Coding Studio (2021 - Now)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolorem, facilis doloremque esse culpa sit minus dolore laborum hic, excepturi neque doloribus? Quam sed unde culpa repellat laboriosam tempore ipsam.</p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
