--- a/index.html
+++ b/index.html
@@ -87,6 +87,25 @@
         </div>
     </section>
 
+    <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dicta atque, ipsa esse veniam qui. Aliquam minus, debitis rem perspiciatis neque culpa tempore similique qui sit blanditiis repellat assumenda ipsa soluta in impedit nisi fuga tempora cum quae a esse provident? Unde alias illo ullam nemo animi dolor quos facere.</p>
+            </div>
+            <div class="col work-img">
+                <div id="work-1" class="work-img-item">
+                    <img src="./images/work-1.png" alt="work-1">
+                </div>
+                <div id="work-2" class="work-img-item">
+                    <img src="./images/work-2.png" alt="work-2">
+                </div>
+                <div id="work-3" class="work-img-item">
+                    <img src="./images/work-3.png" alt="work-3">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
