--- a/index.html
+++ b/index.html
@@ -106,6 +106,47 @@
         </div>
     </section>
 
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique in ipsam ullam mollitia adipisci impedit dolor sunt rerum temporibus magnam quibusdam quis nulla sed officia alias unde molestiae, commodi officiis dicta laudantium possimus modi voluptatem enim. Odit alias nesciunt labore nostrum dolor omnis ipsum quod? Doloribus aliquam illo recusandae tenetur officiis! Nemo, voluptatem dolore.</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="./images/Facebook.svg" alt="facebook">
+                        John Doe
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="./images/Instagram.svg" alt="instagram">
+                        John Doe
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="./images/Twitter.svg" alt="twitter">
+                        John Doe
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <form class="contact-form" onsubmit="onFormSubmit(event)">
+                    <div class="mb-3">
+                        <label for="inp_email" class="form-label">E-Mail</label>
+                        <input type="email" class="form-control" id="inp_email" placeholder="example@mail.com" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_message" class="form-label">Message</label>
+                        <input type="text" class="form-control" id="inp_message" placeholder="Your Message" required>
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
