--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Work</a>
+                        <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -34,21 +34,21 @@
     </nav>
 
     <section id="home" class="home container">
-        <div class="row d-flex align-items-center">
-            <div class="col-8">
+        <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
+            <div class="col-12 col-md-8">
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">John Doe</h1>
                 <p>I am a Software Engineer based in Indonesia.</p>
                 <a class="btn button" href="./images/potrait.png" download="">Resume</a>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
                 <img src="./images/potrait.png" alt="potrait">
             </div>
         </div>
-        <div class="arrow w-100 row d-flex text-center align-items-center flex-column mt-3">
-            <a class="text-decoration-none text-dark" href="#about">More Info</a>
+        <a href="#about" class="text-decoration-none arrow w-100 row d-flex text-center align-items-center flex-column mt-3">
+            <div class="text-dark">More Info</div>
             <img id="arrow" class="mt-2" src="./images/arrow.svg" alt="arrow">
-        </div>
+        </a>
     </section>
 
     <section id="about" class="about container">
@@ -89,10 +89,10 @@
 
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+            <div class="col-12 col-5">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dicta atque, ipsa esse veniam qui. Aliquam minus, debitis rem perspiciatis neque culpa tempore similique qui sit blanditiis repellat assumenda ipsa soluta in impedit nisi fuga tempora cum quae a esse provident? Unde alias illo ullam nemo animi dolor quos facere.</p>
             </div>
-            <div class="col work-img">
+            <div class="col-12 col-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="./images/work-1.png" alt="work-1">
                 </div>
@@ -108,24 +108,24 @@
 
     <section id="contact" class="contact container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+            <div class="col-12 col-lg-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique in ipsam ullam mollitia adipisci impedit dolor sunt rerum temporibus magnam quibusdam quis nulla sed officia alias unde molestiae, commodi officiis dicta laudantium possimus modi voluptatem enim. Odit alias nesciunt labore nostrum dolor omnis ipsum quod? Doloribus aliquam illo recusandae tenetur officiis! Nemo, voluptatem dolore.</p>
                 <div class="row">
                     <div class="col d-flex align-items-center">
-                        <img src="./images/Facebook.svg" alt="facebook">
-                        John Doe
+                        <img class="w-25" src="./images/Facebook.svg" alt="facebook">
+                        <p class="mb-0 ms-2">John Doe</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img src="./images/Instagram.svg" alt="instagram">
-                        John Doe
+                        <img class="w-25" src="./images/Instagram.svg" alt="instagram">
+                        <p class="mb-0 ms-2">John Doe</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img src="./images/Twitter.svg" alt="twitter">
-                        John Doe
+                        <img class="w-25" src="./images/Twitter.svg" alt="twitter">
+                        <p class="mb-0 ms-2">John Doe</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-lg-5">
                 <form class="contact-form" onsubmit="onFormSubmit(event)">
                     <div class="mb-3">
                         <label for="inp_email" class="form-label">E-Mail</label>
