--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col-12 col-5">
+            <div class="col-12 col-md-5">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dicta atque, ipsa esse veniam qui. Aliquam minus, debitis rem perspiciatis neque culpa tempore similique qui sit blanditiis repellat assumenda ipsa soluta in impedit nisi fuga tempora cum quae a esse provident? Unde alias illo ullam nemo animi dolor quos facere.</p>
             </div>
-            <div class="col-12 col-6 work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="./images/work-1.png" alt="work-1">
                 </div>
